--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-streamlit==1.32.0
-opencv-python==4.9.0.80
-torch==2.2.1
-torchvision==0.17.1
-numpy==1.26.4
-pandas==2.2.1
-matplotlib==3.8.3
-Pillow==10.2.0
-ultralytics==8.0.196
-scipy==1.12.0
-filterpy==1.4.5
-seaborn==0.13.2
-plotly==5.19.0
+ultralytics
+gradio
+pillow
+opencv-python
+numpy
