--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-ultralytics
-gradio
-pillow
-opencv-python
-numpy
-streamlit>=1.22.0
-opencv-python>=4.5.0
-Pillow>=9.0.0
-numpy>=1.21.0
+streamlit==1.28.1
+ultralytics==8.0.196
+torch==2.0.1
+torchvision==0.15.2
+opencv-python==4.8.1.78
+numpy==1.24.3
+pillow==10.0.0
