--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ torchvision
 opencv-python
 numpy
 pillow
-
+streamlit==1.28.1
+ultralytics==8.0.196
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
+pillow==10.0.0
