--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-streamlit
-ultralytics
-torch
-torchvision
-opencv-python
-numpy
-pillow
-streamlit==1.28.1
-ultralytics==8.0.196
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-pillow==10.0.0
+streamlit>=1.22.0
+numpy>=1.21.0
+Pillow>=9.0.0
+opencv-python-headless==4.5.5.64
+ultralytics==8.0.20
