--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.22.0
-numpy>=1.21.0
-Pillow>=9.0.0
-opencv-python-headless==4.5.5.64
-ultralytics==8.0.20
+streamlit
+numpy
+Pillow
+opencv-python-headless
+ultralytics
