--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-numpy
-Pillow
-opencv-python-headless
-ultralytics
+streamlit==1.28.1
+numpy==1.24.3
+Pillow==10.0.0
+opencv-python==4.8.1.78
+ultralytics==8.0.196
+torch==2.0.1
+torchvision==0.15.2
