--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.28.1
-numpy==1.24.3
-Pillow==10.0.0
-opencv-python==4.8.1.78
-ultralytics==8.0.196
-torch==2.0.1
-torchvision==0.15.2
+
+
+
+
+streamlit
+ultralytics
+opencv-python-headless
+torch
