--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@
 
 streamlit
 ultralytics
+opencv-python-headlessstreamlit
+ultralytics==8.0.196
 opencv-python-headless
+torch --index-url https://download.pytorch.org/whl/cpu
+
 torch
