--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-
-
-
-
 streamlit
-ultralytics
-opencv-python-headlessstreamlit
 ultralytics==8.0.196
 opencv-python-headless
-torch --index-url https://download.pytorch.org/whl/cpu
-
-torch
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
+-f https://download.pytorch.org/whl/cpu/torch_stable.html
