--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.28.0
-ultralytics>=8.0.0
-torch>=2.0.0
-pillow>=10.0.0
-numpy>=1.24.0
-opencv-python-headless>=4.7.0
+streamlit==1.36.0
+ultralytics==8.3.192
+opencv-python==4.9.0.80
+numpy==1.26.4
+Pillow==10.3.0
